<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="calculator_0">0</string>
    <string name="calculator_1">1</string>
    <string name="calculator_2">2</string>
    <string name="calculator_3">3</string>
    <string name="calculator_4">4</string>
    <string name="calculator_5">5</string>
    <string name="calculator_6">6</string>
    <string name="calculator_7">7</string>
    <string name="calculator_8">8</string>
    <string name="calculator_9">9</string>
    <string name="calculator_equals">=</string>
    <string name="calculator_plus">+</string>
    <string name="calculator_minus">-</string>
    <string name="calculator_multiply">×</string>
    <string name="calculator_divide">÷</string>
    <string name="incomplete_expression">완성되지 않은 수식입니다.</string>
    <string name="unknown_error">알수없는 오류가 발생했습니다.</string>
    <string name="divide_by_zero">0으로 나눌수 없습니다.</string>
    <string name="evaluation_result">= %s</string>
</resources>
