<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="edu.nextstep.camp.calculator.viewmodel.CalculatorViewModel" />

        <import type="edu.nextstep.camp.domain.Operator"/>
        <import type="edu.nextstep.camp.calculator.ExpressionView"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.CalculatorActivity"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:hint="0"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            android:text="@{viewModel.expressionEvent.toString()}"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            setVisibilityByViewType="@{viewModel.viewTypeEvent}"
            tools:ignore="HardcodedText"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView"
            tools:listitem="@layout/item_result"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            setVisibilityByViewType="@{viewModel.viewTypeEvent}"
            tools:visibility="visible"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#ddd"
            app:layout_constraintBottom_toTopOf="@id/buttonDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.Calculator.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:icon="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintBottom_toTopOf="@id/input"
            app:layout_constraintEnd_toEndOf="@id/input"
            android:onClick="@{() -> viewModel.removeLast()}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMemory"
            style="@style/Widget.Calculator.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_access_time_24"
            android:onClick="@{() -> viewModel.toggleViewType()}"
            app:layout_constraintBottom_toBottomOf="@id/buttonDelete"
            app:layout_constraintStart_toStartOf="@id/input"
            app:layout_constraintTop_toTopOf="@id/buttonDelete"
            />

        <GridLayout
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <Button
                android:id="@+id/button7"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_7"
                android:onClick="@{() -> viewModel.addToExpression(7)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_8"
                android:onClick="@{() -> viewModel.addToExpression(8)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_9"
                android:onClick="@{() -> viewModel.addToExpression(9)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_divide"
                android:onClick="@{() -> viewModel.addToExpression(Operator.Divide)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_4"
                android:onClick="@{() -> viewModel.addToExpression(4)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_5"
                android:onClick="@{() -> viewModel.addToExpression(5)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_6"
                android:onClick="@{() -> viewModel.addToExpression(6)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_multiply"
                android:onClick="@{() -> viewModel.addToExpression(Operator.Multiply)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_1"
                android:onClick="@{() -> viewModel.addToExpression(1)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_2"
                android:onClick="@{() -> viewModel.addToExpression(2)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_3"
                android:onClick="@{() -> viewModel.addToExpression(3)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_minus"
                android:onClick="@{() -> viewModel.addToExpression(Operator.Minus)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_0"
                android:onClick="@{() -> viewModel.addToExpression(0)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />

            <Space
                android:id="@+id/space1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.Calculator.Button.BackgroundColored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_equals"
                android:onClick="@{() -> viewModel.calculate()}"
                />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_plus"
                android:onClick="@{() -> viewModel.addToExpression(Operator.Plus)}"
                setEnabledByViewType="@{viewModel.viewTypeEvent}"
                />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
